# measuring_hate_speech_llms

./: .gitignore  pyproject.toml
configs/: human_baseline.yaml  reference_anthropic_claude-sonnet-4-6.yaml  reference_llm_facets.yaml  reference_oai_gpt54.yaml
plots/: plot_question_order_secondary_severity_shift.py  plot_question_order_severity_shift.py  plot_reference_annotator_agreement.py  plot_reference_anthropic_judge_severities.py  plot_reference_average_hate_scores.py  plot_reference_model_severities.py  plot_reference_model_severities_subset.py  plot_reference_score_distribution.py  plot_reference_severity_decomposition_subset.py  plot_target_drf_betas.py  plot_target_drf_betas_by_domain.py  plot_target_drf_odds_heatmap.py
prompts/: mhs_survey_v1.txt  mhs_survey_v1_reversed_severity_order.txt
scripts/: build_question_order_matched.py  launch_async.py  launch_batch.py  launch_model_batch.py  plot_reference_anthropic_opus_judge_severities.py  plot_reference_model_severities.py  plot_reference_openai_judge_severities.py  prepare_human_baseline.py  prepare_llm_facets.py  prepare_llm_only_facets.py  prepare_order_effect_facets.py  prepare_severity_decomposition_facets.py  prepare_target_drf_facets.py  process_async.py  process_batch.py  process_facets_output.py  process_model_batch.py  process_order_effect.py  process_severity_decomposition.py  process_target_drf.py  retry_direct_errors.py  summarize_deepseek_async_cost.py  summarize_kimi_batch_cost.py
tests/: test_annotator_agreement.py  test_async_jobs.py  test_config.py  test_dataset.py  test_facets.py  (+15 more)
(+86 files in other folders)
